# threat-intelligence

./: LICENSE.txt  NOTICE.txt  README.md
kaspersky-feeds-for-opencti/: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  entrypoint.sh  legal_notices.txt
kaspersky-feeds-for-opencti/src/: config.yml.sample  main.py  requirements.txt
kaspersky-feeds-for-opencti/src/kaspersky/: __init__.py  label_utils.py  stix_source.py  stix_transformer.py  taxii_client.py
kaspersky-feeds-for-opencti/src/kaspersky/transforms/: __init__.py  actors_transform.py  indicators_transform.py  industries_transform.py  locations_transform.py  malwares_transform.py  observable_transform.py  reports_transform.py  transform.py  utils.py
kaspersky-feeds-for-opencti/src/kaspersky/transforms/locations/: __init__.py  datasheet.json  datasheet.note  datasheet.py  decode.py  types.py
kaspersky-feeds-for-opencti/tests/: live_description_mode_integration.py  manual_perf_sync.py  test_cluster_aware_batching.py  test_label_and_description_policy.py  test_work_tracking.py
normalize_url/: README.md  go.mod
normalize_url/cmd/: main.go
normalize_url/internal/ip/: ip.go  ip_test.go
normalize_url/pkg/url/: iana.go  iana.txt  iana_test.go  url.go  url_test.go
normalize_url/pkg/url/testdata/: urls.csv
opentip-mcp/: LICENSE.txt  README.md  opentip.py  pyproject.toml
